[tool.poetry]
name = "Microblot"
version = "2021.0.0"
description = "Microblogging chat bot"
authors = ["Nik Kantar <nik@nkantar.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slackclient = "^2.9.3"
SQLAlchemy = "^1.3.22"
fastapi = {extras = ["all"], version = "^0.63.0"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pydocstyle = "^5.1.1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"
